# rubix_cube_solver

rubiks-cube-solver-main/: CMakeLists.txt  main.cpp  rebuild.bat
rubiks-cube-solver-main/Model/: RubiksCube.cpp  RubiksCube.h  RubiksCube1dArray.cpp  RubiksCube3dArray.cpp  RubiksCubeBitboard.cpp
rubiks-cube-solver-main/PatternDatabases/: CornerDBMaker.cpp  CornerPatternDatabase.cpp  NibbleArray.cpp  NibbleArray.h  PatternDatabase.cpp  PatternDatabase.h  PermutationIndexer.h  math.cpp
rubiks-cube-solver-main/Solver/: BFSSolver.h  DFSSolver.h  IDAstarSolver.h  IDDFSSolver.h
